c++ 프로그래밍 수업

--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -139,7 +139,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="10주차 수업.cpp" />
     <ClCompile Include="2주차과제.cpp" />
+    <ClCompile Include="3주차과제.cpp" />
+    <ClCompile Include="3주차수업.cpp" />
+    <ClCompile Include="4주차 수업.cpp" />
+    <ClCompile Include="4주차과제.cpp" />
+    <ClCompile Include="5주차과제.cpp" />
+    <ClCompile Include="5주차수업.cpp" />
+    <ClCompile Include="6주차 과제.cpp" />
+    <ClCompile Include="6주차 수업.cpp" />
+    <ClCompile Include="7주차과제.cpp" />
+    <ClCompile Include="7주차수업.cpp" />
     <ClCompile Include="과제1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
