--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -54,5 +54,8 @@
     <ClCompile Include="10주차 수업.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="12주차수업.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
