c++ 프로그래밍 과제

--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="10주차 수업.cpp" />
+    <ClCompile Include="12주차과제.cpp" />
     <ClCompile Include="12주차수업.cpp" />
     <ClCompile Include="2주차과제.cpp" />
     <ClCompile Include="3주차과제.cpp" />
