--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -57,5 +57,8 @@
     <ClCompile Include="12주차수업.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="12주차과제.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
