c++ 프로그래밍수업

--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -60,5 +60,11 @@
     <ClCompile Include="12주차과제.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="13주차수업.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="14주차수업.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
