--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -66,5 +66,8 @@
     <ClCompile Include="14주차수업.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="공부.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
